[package]
name = "HealthServ"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
sysinfo = "0.30"
chrono = "0.4.39"

#[cfg(target_os = "windows")]
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
